--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
         <!-- footer -->
         <div class="footer">
-          Credit DevOps Reactions – <a href="http://devopsreactions.tumblr.com/post/52368854242/writing-unit-tests" target="_blank">Writing Unit Tests</a>
+          Image Credit DevOps Reactions – <a href="http://devopsreactions.tumblr.com/post/52368854242/writing-unit-tests" target="_blank">Writing Unit Tests</a>
         </div>
 
       </div>
