--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <div class="body">
       <div class="heading">
-        <p>Happpy coding,</p>
+        <p>Happy coding,</p>
         <p>happy hacking.</p>
       </div>
       <div class="info-box">
